# Pytorch-original-AlphaZero

./: .gitignore  Dockerfile  README.md  plot_go.py  plot_gomoku.py  pyproject.toml  requirements.txt  setup.cfg
Alpha-Zero/: training_go.py  training_go_jumbo.py  training_gomoku.py
Alpha-Zero/core/: eval_dataset.py  mcts_v1.py  mcts_v2.py  network.py  pipeline.py  rating.py  replay.py
Alpha-Zero/envs/: base.py  go.py  gomoku.py  gui.py
Alpha-Zero/utils/: csv_writer.py  sgf_wrapper.py  transformation.py  util.py
eval_play/: eval_agent_go.py  eval_agent_go_cmd.py  eval_agent_go_mass_matches.py  eval_agent_gomoku.py  eval_agent_gomoku_cmd.py
logs/go/9x9/: actor3.csv  actor35.csv  actor48.csv  actor64.csv  actor87.csv  actor89.csv
logs/gomoku/13x13/: actor110.csv  actor65.csv  actor70.csv
others/: aggregate_go_actor_logs.py  aggregate_go_matches.py  az_analysis.py  filter_go_sgf.py  go_score_system.py
unit_tests/: eval_dataset_test.py  transformation_test.py
unit_tests/envs/: base_test.py  go_test.py  gomoku_test.py
