[tool.black]
line-length = 127
target-version = ['py310']
skip-string-normalization = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-zero"
version = "0.1.0"
description = "Modular AlphaZero engine for Go and Gomoku"
authors = [{ name = "Pranith Chowdary K", email = "pranithtpm@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "pillow",
    "termcolor"
]