[metadata]
name = alpha-zero
version = 0.1.0
description = Modular AlphaZero engine for Go and Gomoku
author = Pranith Chowdary
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
exclude =
    tests
    unit_tests

[tool:pytest]
testpaths = unit_tests